logs/cython-codegen.log
Listing '.'...
Listing './bin'...
Compiling './bin/xml2cython.py'...
***   File "./bin/xml2cython.py", line 84
    except getopt.error, msg:
                       ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cycodegenlib'...
Compiling './lib/python3.5/site-packages/cycodegenlib/cycodegen.py'...
***   File "./lib/python3.5/site-packages/cycodegenlib/cycodegen.py", line 45
    print "Struct member not handled:", m
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cycodegenlib/cytypes.py'...
***   File "./lib/python3.5/site-packages/cycodegenlib/cytypes.py", line 27
    print "Struct member not handled:", f
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cycodegenlib/funcs.py'...
***   File "./lib/python3.5/site-packages/cycodegenlib/funcs.py", line 44
    print "Argument not handled in generic_as_arg", tp
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cycodegenlib/misc.py'...
***   File "./lib/python3.5/site-packages/cycodegenlib/misc.py", line 57
    print "Do not know how to classify", str(it)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cycodegenlib/tp_puller.py'...
***   File "./lib/python3.5/site-packages/cycodegenlib/tp_puller.py", line 76
    print "Ignoring", item, item.name
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cython_codegen-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
